test_suite5/ALAN/test_suite/alan-2022-examples/failing/005110_mutation.alan
source zVV begin leave D do rem B end
